--- a/package.json
+++ b/package.json
@@ -4,14 +4,9 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.9.0",
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "aws-amplify": "^4.3.12",
+    "eslint-config-react-app": "^7.0.0",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
-    "react-router-bootstrap": "^0.26.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
     "web-vitals": "^2.1.3"
