--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@auth0/auth0-react": "^1.9.0",
+    "@firebase/database": "^0.12.5",
     "eslint-config-react-app": "^7.0.0",
     "firebase": "^9.6.3",
     "react": "^17.0.2",
